# RTHK_Avatar

./: .gitignore  README.md  electron-main.js  nexe.config.json  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  server.js  start-app.bat  tsconfig.tsbuildinfo
api/: app.py  main.py  settings.py  startup.py
api/core/translation/: LLMTranslator.py  LM_configure.py  __init__.py  signature.py  utils.py
api/routers/: __init__.py  translate.py
api/utils/: loggings.py
app/: globals.css  page.tsx
app/components/: AvatarClient.tsx
scripts/: generate_embeddings_database.py  run-nexe.js
