[project]
name = "rthk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.0.2",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "jieba>=0.42.1",
    "opencc>=1.1.9",
    "polars>=1.32.3",
    "pydantic-settings>=2.10.1",
    "sentence-transformers>=5.1.0",
    "thulac>=0.2.2",
    "uvicorn>=0.35.0",
]
